[gd_scene load_steps=7 format=3 uid="uid://ck5wfvj06g536"]

[ext_resource type="Script" uid="uid://bsqrvdn4e1h8n" path="res://src/ui/open_screen.gd" id="1_lve6j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n372o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixow3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_u3bxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black/VBoxContainer/PressHint:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_slaua"]
resource_name = "hint"
length = 1.2
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black/VBoxContainer/PressHint:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3bxu"]
_data = {
&"RESET": SubResource("Animation_u3bxu"),
&"hinting": SubResource("Animation_slaua")
}

[node name="OpenScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lve6j")

[node name="ResourceNode" type="Node2D" parent="."]
z_index = -100
position = Vector2(192, 120)

[node name="Black" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Black"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -76.0
offset_right = 128.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoadingLabel" type="Label" parent="Black/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "OPEN_LOADING"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LoadingProgress" type="ProgressBar" parent="Black/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_n372o")
theme_override_styles/fill = SubResource("StyleBoxFlat_ixow3")

[node name="PressHint" type="Label" parent="Black/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "OPEN_PRESS"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u3bxu")
}
